test/errhandling/lydia/notAnErrorSubtype-thrown-int.chpl
proc main() throws {
  try {
    throw 5;
  }
}
